[package]
name = "advent-of-code-2020-rust"
version = "0.1.0"
authors = ["Nick Schouten <nick@dataroots.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1_1"
path = "src/1_1/bin/main.rs"

[[bin]]
name = "1_2"
path = "src/1_2/bin/main.rs"


[[bin]]
name = "2_1"
path = "src/2_1/bin/main.rs"

[[bin]]
name = "2_2"
path = "src/2_2/bin/main.rs"


[dependencies]
